--- a/src/components/map/PopUpToolTip.module.scss
+++ b/src/components/map/PopUpToolTip.module.scss
@@ -1,5 +1,24 @@
 .popUpDescription {
-  padding: 2rem 1rem 1rem;
+  padding: 2rem 0 1rem;
   font-size: 1.5rem;
   line-height: 1.7;
+}
+
+.title {
+  width: 100%;
+  padding: 0.5rem 1.5rem;
+  background-color: #1b1f53;
+  color: #fff;
+  margin-bottom: 1rem;
+  font-weight: 700;
+  text-align: center;
+}
+
+.mag {
+  display: flex;
+  align-items: center;
+
+  & div {
+    margin-right: 1rem;
+  }
 }
