--- a/src/components/table/DataTable.module.scss
+++ b/src/components/table/DataTable.module.scss
@@ -16,6 +16,10 @@ tr.headClass th {
   padding: 1rem 1rem 1rem 2rem;
 }
 
+.tableOrderable {
+  cursor: pointer;
+}
+
 .tdClass {
   border-bottom: solid 1px rgb(88, 88, 88);
 }
