--- a/src/components/UI/LoadingModal.module.scss
+++ b/src/components/UI/LoadingModal.module.scss
@@ -1,6 +1,10 @@
+.loadingBack {
+  z-index: 550;
+}
+
 .modal {
   position: fixed;
-  z-index: 500;
+  z-index: 600;
   width: 70%;
   padding: 16px;
   left: 15%;
